利用Huffman树压缩

--- a/huffman压缩/huffman压缩/huffman压缩.vcxproj
+++ b/huffman压缩/huffman压缩/huffman压缩.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="compression.cpp" />
+    <ClCompile Include="file.h" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
