--- a/huffman压缩/huffman压缩/huffman压缩.vcxproj.filters
+++ b/huffman压缩/huffman压缩/huffman压缩.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="compression.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="uncompression.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="huffman.h">
